# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/healthcheck/HealthCheckAPI": {
+        "/HealthCheck/api": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -18,7 +18,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "healthcheck"
+                    "HealthCheck"
                 ],
                 "summary": "Show status api",
                 "responses": {
@@ -31,7 +31,7 @@
                 }
             }
         },
-        "/healthcheck/HealthCheckDB": {
+        "/HealthCheck/db": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -40,7 +40,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "healthcheck"
+                    "HealthCheck"
                 ],
                 "summary": "Show status database",
                 "responses": {
